# libgtkfw

./: Makefile.am  Makefile.decl  a.c  autogen.sh  configure.ac  gtkfw-1.0.pc.in  magic-button.c  magic-button.h  magic-window.c  magic-window.h  main.c  makefile  meson.build  meson_options.txt
example/: Makefile.am  meson.build
example/button/: Makefile.am  main.c  meson.build
example/window/: main.c  meson.build  shape-window.c
gfw/: Makefile.am  gfw-button.c  gfw-button.h  gfw-color.c  gfw-color.h  gfw-ip-entry.c  gfw-ip-entry.h  gfw-pie-chart.c  gfw-pie-chart.h  gfw-window.c  gfw-window.h  gfw-zoom.c  gfw-zoom.h  gfw.h  gtkfw.h  meson.build
test/: piechart-example.c
tests/: Makefile.am  button.c  ipaddress.c  piechart-example.c  shape-window.c  window.c  zoom.c
