main = executable('window',
	'main.c',
    include_directories : [top_srcdir, top_libdir],
    link_with: [lib_gtkfw],
    dependencies : gtk_deps,
)

shape_window = executable('shape-window',
	'shape-window.c',
    include_directories : [top_srcdir, top_libdir],
    link_with: [lib_gtkfw],
    dependencies : gtk_deps,
)
